Fixed backdrop overlay misalignment issue in Safari

--- a/src/views/movie-details/_movie-details.scss
+++ b/src/views/movie-details/_movie-details.scss
@@ -17,10 +17,8 @@
     }
 
     &__overlay {
-      position: absolute;
       background-color: rgba(black, 0.4);
       height: 100%;
-      width: 100%;
     }
   }
 
